more readable and slightly fixed design

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -29,7 +29,8 @@ header {
 	margin-bottom: 50px;
 }
 
-.post img {
+.post img,
+.post iframe {
     display: block;
     margin-left: auto;
     margin-right: auto
@@ -40,9 +41,12 @@ header {
 
 .post .post-content {
 	margin-top: 25px;
-	font-size: 14px;
-	line-height: 20px;
+	font-size: 16px;
+	line-height: 24px;
 	text-align: justify;
+}
+.post .post-content p {
+	margin-bottom: 30px;
 }
 
 .post .post-meta {
